--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE HTML>
-<!--
-	Aerial by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Andrew "AJ" Howard</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
+		<link href="favicon.ico" rel="shortcut icon" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
@@ -36,7 +33,7 @@
 							<ul>
 								<li><a href="http://www.goalopedia.com/" class="icon fa-futbol-o"><span class="label" target="_blank">Goalopedia</span></a></li>
 								<li><a href="http://bruinbins.com/" class="icon fa-archive"><span class="label" target="_blank">Github</span></a></li>
-								<li><a href="#" class="icon fa-file" target="_blank"><span class="label">Resume</span></a></li>
+								<li><a href="resume.pdf" class="icon fa-file" target="_blank"><span class="label">Resume</span></a></li>
 								<li><a href="https://www.linkedin.com/in/ajhoward14" class="icon fa-linkedin"><span class="label" target="_blank">LinkedIn</span></a></li>
 								<li><a href="mailto:ajhoward14@gmail.com" class="icon fa-envelope-o"><span class="label" target="_blank">Email</span></a></li>
 							</ul>
@@ -52,3 +49,7 @@
 		</div>
 	</body>
 </html>
+
+<!--
+ Purchased From http://pixelarity.com/
+-->
